--- a/reviews_detail.html
+++ b/reviews_detail.html
@@ -179,18 +179,15 @@
                     <div class="meta">
                         <!-- quality -->
                         <div class="quality">
-                            <svg class="ui_icon ui_icon_svg">
-                                <use xlink:href="#icon_qualityreview"></use>
-                            </svg>
-                            <span>
+                            <span class="txt">
                                 quality review
                             </span>
                         </div>
                         <!--/ end quality -->
                         <!-- content -->
                         <div class="content">
-                            <!-- info -->
-                            <div class="info">
+                            <!-- comments -->
+                            <div class="comments">
                                 <!-- stars -->
                                 <div class="stars">
                                     <!-- width = 個數 * 12 -->
@@ -204,7 +201,7 @@
                                 </div>
                                 <!--/ end price -->
                             </div>
-                            <!--/ end info -->
+                            <!--/ end comments -->
                             <!-- time -->
                             <span class="time">
                                 July 2, 2017
