--- a/_commentslist.html
+++ b/_commentslist.html
@@ -68,7 +68,7 @@
             <!-- footer -->
             <div class="footer">
                 <ul class="list">
-                    <li>
+                    <li class="btn_like">
                         <svg class="ui_icon ui_icon_svg like">
                             <use xlink:href="#icon_like"></use>
                         </svg>
@@ -76,7 +76,7 @@
                             Like
                         </span>
                     </li>
-                    <li>
+                    <li class="btn_comment">
                         <svg class="ui_icon ui_icon_svg">
                             <use xlink:href="#icon_comment"></use>
                         </svg>
@@ -84,7 +84,7 @@
                             Comment
                         </span>
                     </li>
-                    <li class="more">
+                    <li class="more btn_more">
                         <svg class="ui_icon ui_icon_svg">
                             <use xlink:href="#icon_more"></use>
                         </svg>
