--- a/_common_jsTpl.html
+++ b/_common_jsTpl.html
@@ -69,4 +69,51 @@
 </script>
 <!-- /end tpl_selectcity -->
 
+<!-- tpl_preview_picture -->
+<script id="tpl_preview_picture" type="text/x-jsrender">
+    <div class="preview_picture">
+        <!-- img -->
+        <div class="img">
+            <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" />
+        </div>
+        <!--/ end img -->
+        <!-- content -->
+        <div class="content">
+            <!-- title -->
+            <h3 class="title">
+                Cream Cheese Strawberry Waffles
+            </h3>
+            <!--/ end title -->
+            <!-- meta -->
+            <div class="meta">
+                <ul class="list">
+                    <li class="name"></li>
+                    <li class="time"></li>
+                    <li class="tools">
+                        <a href="">
+                            <svg class="ui_icon ui_icon_svg">
+                                <use xlink:href="#icon_like"></use>
+                            </svg>
+                        </a>
+                        <a href="">
+                            <svg class="ui_icon ui_icon_svg">
+                                <use xlink:href="#icon_download"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!--/ end meta -->
+        </div>
+        <!-- content -->
+
+        <a class="btn_close dialog_close">
+            <svg class="ui_icon ui_icon_svg">
+                <use xlink:href="#icon_close"></use>
+            </svg>
+        </a>
+    </div>
+</script>
+<!-- /end tpl_preview_picture -->
+
 <!--/ end tpl -->
