--- a/reward.html
+++ b/reward.html
@@ -75,9 +75,9 @@
     <link rel="stylesheet" type="text/css" href="/css/layout.css" />
     <!--/ end layout css -->
 
-    <!-- profile css -->
-    <link rel="stylesheet" type="text/css" href="/css/profile.css" />
-    <!--/ end profile css -->
+    <!-- reward css -->
+    <link rel="stylesheet" type="text/css" href="/css/reward.css" />
+    <!--/ end reward css -->
     <!--/ end css -->
 </head>
 
@@ -120,8 +120,8 @@
 
         <!-- container -->
         <div id="container" class="wrap_container">
-            <!-- profile reward -->
-            <div class="profile reward container">
+            <!-- reward -->
+            <div class="reward container">
                 <!-- ui_block rewardlist -->
                 <section class="ui_block rewardlist">
                     <!-- title -->
@@ -591,7 +591,7 @@
                 </section>
                 <!--/ end ui_block pointslist -->
             </div>
-            <!--/ end profile reward -->
+            <!--/ end reward -->
         </div>
         <!--/ end container -->
 
