--- a/_commentslist.html
+++ b/_commentslist.html
@@ -29,12 +29,12 @@
             <!--/ end header -->
             <!-- extcon -->
             <div class="extcon">
-                <!-- stars -->
-                <div class="stars">
+                <!-- ui_icon icon_stars -->
+                <i class="ui_icon icon_stars">
                     <!-- width = 個數 * 12 -->
                     <i class="star" style="width: calc(4*12px);"></i>
-                </div>
-                <!--/ end stars -->
+                </i>
+                <!--/ end ui_icon icon_stars -->
 
                 <!-- price -->
                 <div class="price">
@@ -143,12 +143,12 @@
             <!--/ end header -->
             <!-- extcon -->
             <div class="extcon">
-                <!-- stars -->
-                <div class="stars">
+                <!-- ui_icon icon_stars -->
+                <i class="ui_icon icon_stars">
                     <!-- width = 個數 * 12 -->
                     <i class="star" style="width: calc(4*12px);"></i>
-                </div>
-                <!--/ end stars -->
+                </i>
+                <!--/ end ui_icon icon_stars -->
 
                 <!-- price -->
                 <div class="price">
