--- a/_shoplist.html
+++ b/_shoplist.html
@@ -19,12 +19,12 @@
 
                 <!-- comments -->
                 <div class="comments">
-                    <!-- stars -->
-                    <i class="stars block">
+                    <!-- ui_icon icon_stars -->
+                    <i class="ui_icon icon_stars block">
                         <!-- width = 個數 * 12 -->
                         <i class="star" style="width: calc(3.5*12px);"></i>
                     </i>
-                    <!--/ end stars -->
+                    <!--/ end ui_icon icon_stars -->
 
                     <!-- comment -->
                     <div class="comment block">
