--- a/profile.html
+++ b/profile.html
@@ -405,12 +405,12 @@
 
                                         <!-- reviews -->
                                         <div class="reviews">
-                                            <!-- stars -->
-                                            <div class="stars">
+                                            <!-- ui_icon icon_stars -->
+                                            <i class="ui_icon icon_stars">
                                                 <!-- width = 個數 * 12 -->
                                                 <i class="star" style="width: calc(4*12px);"></i>
-                                            </div>
-                                            <!--/ end stars -->
+                                            </i>
+                                            <!--/ end ui_icon icon_stars -->
 
                                             <!-- price -->
                                             <div class="price">
@@ -546,12 +546,12 @@
 
                                         <!-- reviews -->
                                         <div class="reviews">
-                                            <!-- stars -->
-                                            <div class="stars">
+                                            <!-- ui_icon icon_stars -->
+                                            <i class="ui_icon icon_stars">
                                                 <!-- width = 個數 * 12 -->
                                                 <i class="star" style="width: calc(4*12px);"></i>
-                                            </div>
-                                            <!--/ end stars -->
+                                            </i>
+                                            <!--/ end ui_icon icon_stars -->
 
                                             <!-- price -->
                                             <div class="price">
