--- a/restaurant.html
+++ b/restaurant.html
@@ -157,12 +157,12 @@
                             <ul class="list">
                                 <!-- comments -->
                                 <li class="comments">
-                                    <!-- stars -->
-                                    <div class="stars block">
+                                    <!-- ui_icon icon_stars -->
+                                    <i class="ui_icon icon_stars block">
                                         <!-- width = 個數 * 12 -->
                                         <i class="star" style="width: calc(4*12px);"></i>
-                                    </div>
-                                    <!--/ end stars -->
+                                    </i>
+                                    <!--/ end ui_icon icon_stars -->
 
                                     <!-- review -->
                                     <div class="review block">
@@ -319,6 +319,27 @@
                     <!--/ end footer -->
                 </section>
                 <!--/ end ui_block baseinfo -->
+
+                <!-- ui_block promotions -->
+                <section class="ui_block promotions">
+                    <!-- title -->
+                    <h2 class="title">
+                        Promotions
+                    </h2>
+                    <!-- title -->
+                    <!-- content  -->
+                    <div class="content">
+
+                        <!-- 請按實際需要渲染頁面 -->
+                        <!-- voucherlist -->
+                        <div class="include" file="_voucherlist.html"></div>
+                        <!--/ end voucherlist -->
+                        <!--/ end 請按實際需要渲染頁面 -->
+
+                    </div>
+                    <!--/ end content -->
+                </section>
+                <!--/ end ui_block promotions -->
 
                 <!-- ui_block dishes -->
                 <section class="ui_block dishes">
