--- a/search.html
+++ b/search.html
@@ -496,12 +496,12 @@
 
                                         <!-- comments -->
                                         <div class="comments">
-                                            <!-- stars -->
-                                            <i class="stars block">
+                                            <!-- ui_icon icon_stars -->
+                                            <i class="ui_icon icon_stars block">
                                                 <!-- width = 個數 * 12 -->
                                                 <i class="star" style="width: calc(3.5*12px);"></i>
                                             </i>
-                                            <!--/ end stars -->
+                                            <!--/ end ui_icon icon_stars -->
 
                                             <!-- comment -->
                                             <div class="comment block">
@@ -555,12 +555,12 @@
 
                                         <!-- comments -->
                                         <div class="comments">
-                                            <!-- stars -->
-                                            <i class="stars block">
+                                            <!-- ui_icon icon_stars -->
+                                            <i class="ui_icon icon_stars block">
                                                 <!-- width = 個數 * 12 -->
                                                 <i class="star" style="width: calc(4*12px);"></i>
                                             </i>
-                                            <!--/ end stars -->
+                                            <!--/ end ui_icon icon_stars -->
 
                                             <!-- comment -->
                                             <div class="comment block">
