--- a/restaurant.html
+++ b/restaurant.html
@@ -19,39 +19,11 @@
     <meta name="format-detection" content="address=no">
     <meta name="format-detection" content="email=no">
 
-    <!-- DNS預解析 -->
-    <link rel="preconnect" href="//www.carimakan.co.id">
-    <link rel="preconnect" href="//image.carimakan.co.id">
-
-    <link rel="dns-prefetch" href="//www.carimakan.co.id">
-    <link rel="dns-prefetch" href="//image.carimakan.co.id">
-
-    <link rel="dns-prefetch" href="//fonts.gstatic.com">
-    <link rel="dns-prefetch" href="//ajax.googleapis.com">
-    <link rel="dns-prefetch" href="//partner.gooleadservices.com">
-    <link rel="dns-prefetch" href="//google.com.tw">
-    <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
-    <link rel="dns-prefetch" href="//google-analytics.com">
-    <link rel="dns-prefetch" href="//googleads.g.doubleclick.net">
-    <link rel="dns-prefetch" href="//pubads.g.doubleclick.net">
-    <link rel="dns-prefetch" href="//graph.facebook.com">
-    <link rel="dns-prefetch" href="//facebook.com">
-    <link rel="dns-prefetch" href="//connect.facebook.net">
-    <!--/ end DNS預解析 -->
-
-    <meta name=robots content=noarchive>
-    <meta name=google content=notranslate>
-
-    <meta property="fb:pages" content="" />
-    <meta property="fb:app_id" content="" />
-
-    <meta name="Copyright" content="©2017 CariMakan All Rights Reserved."/>
-    <meta name="description" content="description" />
-    <meta name="keywords" content="keywords" />
-    <meta property="og:site_name" content="og:site_name" />
-    <meta property="og:title" content="og:title" />
-    <meta property="og:url" content="og:url" />
-    <meta property="og:description" content="og:description" />
+    <!-- 請按實際需要渲染頁面 -->
+    <!-- meta -->
+    <div class="include" file="_meta.html"></div>
+    <!--/ end meta -->
+    <!--/ end 請按實際需要渲染頁面 -->
 
     <script type="text/javascript">
     if (top != self) {
