--- a/restaurant.html
+++ b/restaurant.html
@@ -19,11 +19,41 @@
     <meta name="format-detection" content="address=no">
     <meta name="format-detection" content="email=no">
 
-    <!-- 請按實際需要渲染頁面 -->
-    <!-- meta -->
-    <div class="include" file="_meta.html"></div>
-    <!--/ end meta -->
-    <!--/ end 請按實際需要渲染頁面 -->
+    <!-- DNS預解析 -->
+    <link rel="preconnect" href="//www.carimakan.co.id">
+    <link rel="preconnect" href="//image.carimakan.co.id">
+
+    <link rel="dns-prefetch" href="//www.carimakan.co.id">
+    <link rel="dns-prefetch" href="//image.carimakan.co.id">
+
+    <link rel="dns-prefetch" href="//fonts.gstatic.com">
+    <link rel="dns-prefetch" href="//ajax.googleapis.com">
+    <link rel="dns-prefetch" href="//maps.googleapis.com">
+    <link rel="dns-prefetch" href="//partner.gooleadservices.com">
+    <link rel="dns-prefetch" href="//google.com.tw">
+    <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
+    <link rel="dns-prefetch" href="//google-analytics.com">
+    <link rel="dns-prefetch" href="//googleads.g.doubleclick.net">
+    <link rel="dns-prefetch" href="//pubads.g.doubleclick.net">
+    <link rel="dns-prefetch" href="//graph.facebook.com">
+    <link rel="dns-prefetch" href="//facebook.com">
+    <link rel="dns-prefetch" href="//connect.facebook.net">
+    <!--/ end DNS預解析 -->
+
+    <meta name=robots content=noarchive>
+    <meta name=google content=notranslate>
+
+    <meta property="fb:pages" content="" />
+    <meta property="fb:app_id" content="" />
+
+    <meta name="Copyright" content="©2017 CariMakan All Rights Reserved."/>
+    <meta name="description" content="description" />
+    <meta name="keywords" content="keywords" />
+    <meta property="og:site_name" content="og:site_name" />
+    <meta property="og:title" content="og:title" />
+    <meta property="og:url" content="og:url" />
+    <meta property="og:description" content="og:description" />
+
 
     <script type="text/javascript">
     if (top != self) {
@@ -247,10 +277,13 @@
                                             910m dari lokasi anda
                                         </p>
                                     </div>
-                                    <div class="img">
-                                        <!-- img size: 90 * 60 -->
-                                        <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" />
+                                    <!-- map -->
+                                    <div class="map">
+                                        <!-- google-maps -->
+                                        <div class="googlemaps" id="googleMaps"></div>
+                                        <!--/ end google-maps -->
                                     </div>
+                                    <!--/ end map -->
                                 </a>
                             </li>
                             <!-- region -->
@@ -724,10 +757,20 @@
 
 
     <!-- script js -->
+    <!-- layout js -->
     <script type="text/javascript" src="/js/lib/plugin.js"></script>
-    <script type="text/javascript" src="/js/lib/OMIS.js"></script>
     <!-- <script type="text/javascript" src="/js/platform/fb.js"></script> -->
     <script type="text/javascript" src="/js/com.js"></script>
+    <!--/ end layout js -->
+
+    <!-- restaurant js -->
+    <script type="text/javascript" src="/js/restaurant.js"></script>
+    <script type="text/javascript">
+        var mapObjID = 'googleMaps',
+            // 當前標記
+            latlng = {lat: -6.224305, lng: 106.938922};
+    </script>
+    <!--/ end restaurant js -->
     <!--/ end script js -->
 
 
