--- a/_commentslist.html
+++ b/_commentslist.html
@@ -45,13 +45,10 @@
             <!--/ end extcon -->
             <!-- con -->
             <div class="con">
-                <!-- content -->
-                <div class="content">
-                    <p>
-                        This place is just awesome. It serves freshly baked pizzas and there is a lot more to explore. The ambience is very good.
-                    </p>
-                </div>
-                <!--/ end content -->
+                <p>
+                    This place is just awesome. It serves freshly baked pizzas and there is a lot more to explore. The ambience is very good.
+                </p>
+
                 <!-- imgs -->
                 <div class="imgs">
                     <!-- loop list -->
@@ -61,6 +58,16 @@
                     </div>
                     <!--/ end img -->
                     <!--/ end loop list -->
+                    <!-- img -->
+                    <div class="img">
+                        <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" />
+                    </div>
+                    <!--/ end img -->
+                    <!-- img -->
+                    <div class="img">
+                        <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" />
+                    </div>
+                    <!--/ end img -->
                 </div>
                 <!--/ end imgs -->
             </div>
@@ -159,15 +166,12 @@
             <!--/ end extcon -->
             <!-- con -->
             <div class="con">
-                <!-- content -->
-                <div class="content">
-                    <p>
-                        This place is just awesome. It serves freshly baked pizzas and there is a lot more to explore. The ambience is very good.
-                    </p>
-                </div>
-                <!--/ end content -->
+                <p>
+                    This place is just awesome. It serves freshly baked pizzas and there is a lot more to explore. The ambience is very good.
+                </p>
+
                 <!-- imgs -->
-                <div class="imgs">
+                <div class="imgs one">
                     <!-- loop list -->
                     <!-- img -->
                     <div class="img">
@@ -175,6 +179,121 @@
                     </div>
                     <!--/ end img -->
                     <!--/ end loop list -->
+                </div>
+                <!--/ end imgs -->
+            </div>
+            <!--/ end con -->
+            <!-- footer -->
+            <div class="footer">
+                <ul class="list">
+                    <li>
+                        <svg class="ui_icon ui_icon_svg like cur">
+                            <use xlink:href="#icon_like"></use>
+                        </svg>
+                        <span>
+                            10 Likes
+                        </span>
+                    </li>
+                    <li>
+                        <svg class="ui_icon ui_icon_svg">
+                            <use xlink:href="#icon_comment"></use>
+                        </svg>
+                        <span>
+                            2 Comments
+                        </span>
+                    </li>
+                    <li class="more">
+                        <svg class="ui_icon ui_icon_svg">
+                            <use xlink:href="#icon_more"></use>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
+            <!--/ end footer -->
+            <!-- comment -->
+            <div class="comment">
+                <ul class="list">
+                    <!-- loop list -->
+                    <li>
+                        <p>
+                            <a href="#" class="name">Rica Finley</a>
+                            Makan es krim niih. Ada yang vanilla mint bubblegum coklat eruk dan masi banyak lagi!
+                        </p>
+                    </li>
+                    <!--/ end loop list -->
+                </ul>
+                <!-- more -->
+                <a href="#" class="more">
+                    View All 23 Comments
+                </a>
+                <!--/ end more -->
+            </div>
+            <!--/ end comment -->
+        </div>
+        <!--/ end content -->
+    </li>
+    <li>
+        <!-- user_img -->
+        <div class="user_img">
+            <a href="#">
+                <img src="/images/placeholder_avatar.jpg">
+            </a>
+        </div>
+        <!--/ end user_img -->
+        <!-- content -->
+        <div class="content">
+            <!-- header -->
+            <div class="header">
+                <!-- title -->
+                <h3 class="title">
+                    <a href="#">
+                        Clayton Sandoval
+                    </a>
+                </h3>
+                <!--/ end title -->
+                <!-- time -->
+                <span class="time">
+                    July 2, 2017
+                </span>
+                <!--/ end time -->
+            </div>
+            <!--/ end header -->
+            <!-- extcon -->
+            <div class="extcon">
+                <!-- ui_icon icon_stars -->
+                <i class="ui_icon icon_stars">
+                    <!-- width = 個數 * 12 -->
+                    <i class="star" style="width: calc(4*12px);"></i>
+                </i>
+                <!--/ end ui_icon icon_stars -->
+
+                <!-- price -->
+                <div class="price">
+                    Rp 15K/ Orang
+                </div>
+                <!--/ end price -->
+            </div>
+            <!--/ end extcon -->
+            <!-- con -->
+            <div class="con">
+                <p>
+                    This place is just awesome. It serves freshly baked pizzas and there is a lot more to explore. The ambience is very good.
+                </p>
+
+                <!-- imgs -->
+                <div class="imgs two">
+                    <!-- loop list -->
+                    <!-- img -->
+                    <div class="img">
+                        <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" />
+                    </div>
+                    <!--/ end img -->
+                    <!--/ end loop list -->
+                    <!-- img -->
+                    <div class="img">
+                        <img src="https://qcloud.dpfile.com/pc/v6TCFD-2Tf-DXYHSDV-zUJBcGgQ11JtQWm1moPYZ8ECPcd7Ne6CwT1EpdSf39GdfTYGVDmosZWTLal1WbWRW3A.jpg" />
+                    </div>
+                    <!--/ end img -->
                 </div>
                 <!--/ end imgs -->
             </div>
