--- a/_common_jsTpl.html
+++ b/_common_jsTpl.html
@@ -116,4 +116,33 @@
 </script>
 <!-- /end tpl_preview_picture -->
 
+<!-- tpl_getAppsDialog -->
+<script id="tpl_getAppsDialog" type="text/x-jsrender">
+    <div class="getappsdialog">
+        <!-- header -->
+        <div class="header">
+            <h2 class="title">
+                Fitur ini hanya ada di Aplikasi
+            </h2>
+
+            <a class="btn_close dialog_close">
+                <svg class="ui_icon ui_icon_svg">
+                    <use xlink:href="#icon_close"></use>
+                </svg>
+            </a>
+        </div>
+        <!--/ end header -->
+
+        <!-- content -->
+        <div class="content">
+            <div class="downloadapp">
+                <a href="#" class="btn appstore" target="_blank">appstore</a>
+                <a href="#" class="btn googleplay" target="_blank"> googleplay</a>
+            </div>
+        </div>
+        <!-- content -->
+    </div>
+</script>
+<!-- /end tpl_getAppsDialog -->
+
 <!--/ end tpl -->
