--- a/index.html
+++ b/index.html
@@ -87,8 +87,15 @@
 
     <!-- wrap -->
     <div id="wrap" class="wrap">
+
         <!-- header -->
         <header id="header" class="wrap_header">
+            <!-- banner img -->
+            <section class="banner img btn_downloadapp">
+                <img src="/images/banner/banner_fixedtop.jpg">
+            </section>
+            <!--/ end banner img -->
+
             <!-- container -->
             <div class="container">
                 <!-- banner -->
@@ -108,21 +115,19 @@
                 <!-- main -->
                 <section class="main">
                     <!-- city -->
-                    <div class="city">
+                    <div class="city btn_getCity">
                         Jakarta
                     </div>
                     <!--/ end city -->
 
                     <!-- search -->
-                    <div class="search">
-                        <form action="">
-                            <div class="ui_text ui_text_group icon">
-                                <input class="input" type="text" name="" value="" placeholder="Search">
-                                <svg class="ui_icon ui_icon_svg">
-                                    <use xlink:href="#icon_search"></use>
-                                </svg>
-                            </div>
-                        </form>
+                    <div class="search btn_search">
+                        <div class="ui_text ui_text_group icon">
+                            <input class="input" type="text" name="" value="" placeholder="Search">
+                            <svg class="ui_icon ui_icon_svg">
+                                <use xlink:href="#icon_search"></use>
+                            </svg>
+                        </div>
                     </div>
                     <!--/ end search -->
 
@@ -235,10 +240,15 @@
 
 
     <!-- script js -->
+    <!-- layout js -->
     <script type="text/javascript" src="/js/lib/plugin.js"></script>
-    <script type="text/javascript" src="/js/lib/OMIS.js"></script>
     <!-- <script type="text/javascript" src="/js/platform/fb.js"></script> -->
     <script type="text/javascript" src="/js/com.js"></script>
+    <!--/ end layout js -->
+
+    <!-- com js -->
+    <!-- <script type="text/javascript" src="/js/com.js"></script> -->
+    <!--/ end com js -->
     <!--/ end script js -->
 
 
