--- a/privacy.html
+++ b/privacy.html
@@ -268,10 +268,15 @@
 
 
     <!-- script js -->
+    <!-- layout js -->
     <script type="text/javascript" src="/js/lib/plugin.js"></script>
-    <script type="text/javascript" src="/js/lib/OMIS.js"></script>
     <!-- <script type="text/javascript" src="/js/platform/fb.js"></script> -->
     <script type="text/javascript" src="/js/com.js"></script>
+    <!--/ end layout js -->
+
+    <!-- com js -->
+    <!-- <script type="text/javascript" src="/js/com.js"></script> -->
+    <!--/ end com js -->
     <!--/ end script js -->
 
 
