--- a/profile.html
+++ b/profile.html
@@ -118,7 +118,7 @@
                     <ul class="tools">
                         <li>
                             <!-- setting -->
-                            <a class="setting btn_getapp">
+                            <a class="setting btn_getAppsDialog">
                                 <svg class="ui_icon ui_icon_svg">
                                     <use xlink:href="#icon_setting"></use>
                                 </svg>
@@ -205,7 +205,7 @@
 
                         <!-- tools -->
                         <div class="tools">
-                            <a class="ui_btn btn2 btn_getapp">
+                            <a class="ui_btn btn2 btn_getAppsDialog">
                                 <svg class="ui_icon ui_icon_svg">
                                     <use xlink:href="#icon_pencial"></use>
                                 </svg>
@@ -213,7 +213,7 @@
                                     Edit
                                 </span>
                             </a>
-                            <a class="ui_btn btn1 btn_getapp">
+                            <a class="ui_btn btn1 btn_getAppsDialog">
                                 <svg class="ui_icon ui_icon_svg">
                                     <use xlink:href="#icon_discount"></use>
                                 </svg>
@@ -221,7 +221,7 @@
                                     Voucher Saya
                                 </span>
                             </a>
-                            <a class="ui_btn btn1 btn_getapp follow">
+                            <a class="ui_btn btn1 btn_getAppsDialog follow">
                                 <span class="succssful">
                                     <svg class="ui_icon ui_icon_svg">
                                         <use xlink:href="#icon_check"></use>
@@ -231,7 +231,7 @@
                                     Follow
                                 </span>
                             </a>
-                            <a class="ui_btn btn1 btn_getapp follow succssful">
+                            <a class="ui_btn btn1 btn_getAppsDialog follow succssful">
                                 <span class="succssful">
                                     <svg class="ui_icon ui_icon_svg">
                                         <use xlink:href="#icon_check"></use>
@@ -284,7 +284,7 @@
                                 </div>
                                 <div class="bottom">
                                     <svg class="ui_icon ui_icon_svg">
-                                        <use xlink:href="#icon_chechin"></use>
+                                        <use xlink:href="#icon_checkin"></use>
                                     </svg>
                                     <span>
                                         Check In
@@ -812,10 +812,15 @@
 
 
     <!-- script js -->
+    <!-- layout js -->
     <script type="text/javascript" src="/js/lib/plugin.js"></script>
-    <script type="text/javascript" src="/js/lib/OMIS.js"></script>
     <!-- <script type="text/javascript" src="/js/platform/fb.js"></script> -->
     <script type="text/javascript" src="/js/com.js"></script>
+    <!--/ end layout js -->
+
+    <!-- com js -->
+    <!-- <script type="text/javascript" src="/js/com.js"></script> -->
+    <!--/ end com js -->
     <!--/ end script js -->
 
 
