--- a/restaurant.html
+++ b/restaurant.html
@@ -721,7 +721,7 @@
                             <li>
                                 <a>
                                     <svg class="ui_icon ui_icon_svg">
-                                        <use xlink:href="#icon_chechin"></use>
+                                        <use xlink:href="#icon_checkin"></use>
                                     </svg>
                                 </a>
                             </li>
