--- a/reward.html
+++ b/reward.html
@@ -444,7 +444,7 @@
                                 <div class="content">
                                     <div class="icon">
                                         <svg class="ui_icon ui_icon_svg">
-                                            <use xlink:href="#icon_chechin"></use>
+                                            <use xlink:href="#icon_checkin"></use>
                                         </svg>
                                     </div>
                                     <div class="con">
@@ -605,10 +605,15 @@
 
 
     <!-- script js -->
+    <!-- layout js -->
     <script type="text/javascript" src="/js/lib/plugin.js"></script>
-    <script type="text/javascript" src="/js/lib/OMIS.js"></script>
     <!-- <script type="text/javascript" src="/js/platform/fb.js"></script> -->
     <script type="text/javascript" src="/js/com.js"></script>
+    <!--/ end layout js -->
+
+    <!-- com js -->
+    <!-- <script type="text/javascript" src="/js/com.js"></script> -->
+    <!--/ end com js -->
     <!--/ end script js -->
 
 
