--- a/restaurant.html
+++ b/restaurant.html
@@ -719,21 +719,21 @@
                     <div class="content">
                         <ul class="list">
                             <li>
-                                <a>
+                                <a href="checkin.html">
                                     <svg class="ui_icon ui_icon_svg">
                                         <use xlink:href="#icon_checkin"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a>
+                                <a class="btn_getAppsDialog">
                                     <svg class="ui_icon ui_icon_svg">
                                         <use xlink:href="#icon_camera"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a>
+                                <a class="btn_getAppsDialog">
                                     <svg class="ui_icon ui_icon_svg">
                                         <use xlink:href="#icon_review"></use>
                                     </svg>
@@ -759,6 +759,7 @@
     <!-- script js -->
     <!-- layout js -->
     <script type="text/javascript" src="/js/lib/plugin.js"></script>
+    <script type="text/javascript" src="/js/lib/OMIS.js"></script>
     <!-- <script type="text/javascript" src="/js/platform/fb.js"></script> -->
     <script type="text/javascript" src="/js/com.js"></script>
     <!--/ end layout js -->
